Commented GCC's specific option to report auto-vectorization

--- a/gap_affine/Makefile
+++ b/gap_affine/Makefile
@@ -23,7 +23,7 @@ MODULES=affine_penalties \
 SRCS=$(addsuffix .c, $(MODULES))
 OBJS=$(addprefix $(FOLDER_BUILD)/, $(SRCS:.c=.o))
 
-CC_XFLAGS=-march=native -fopt-info-vec-optimized
+CC_XFLAGS=-march=native ##-fopt-info-vec-optimized
 
 ###############################################################################
 # Rules
